force-app/main/default/objects/Technical_Sales_Expert__c/Technical_Sales_Expert__c.object-meta.xml
<CustomObject>
    <description>Technical Sales Experts assigned by Sales Ops</description>
    <label>Support TSE</label>
    <nameField>
        <label>SF_TSE_ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support TSEs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>