force-app/main/default/objects/Technical_Sales_Expert__c/fields/Account_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Account_Latitude__c</fullName>
    <formula>Account__r.ShippingLatitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Latitude</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>