force-app/main/default/objects/Technical_Sales_Expert__c/fields/Account_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Account_Longitude__c</fullName>
    <formula>Account__r.ShippingLongitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Longitude</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>