force-app/main/default/objects/Technical_Sales_Expert__c/fields/Account_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Zip_Code__c</fullName>
    <formula>Account__r.ZIP_Master__r.ZIP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Zip Code</label>
    <type>Text</type>
</CustomField>