force-app/main/default/objects/Technical_Sales_Expert__c/fields/Effective_dt__c.field-meta.xml
<CustomField>
    <fullName>Effective_dt__c</fullName>
    <description>Date TSE is effective</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>