force-app/main/default/objects/Technical_Sales_Expert__c/fields/My_Teams_Specialist__c.field-meta.xml
<CustomField>
    <fullName>My_Teams_Specialist__c</fullName>
    <formula>IF( 
or( 
  Technical_Sales_Expert_lookup__r.ManagerId  = $User.Id 
,Technical_Sales_Expert_lookup__r.Sales_Manager__c= $User.Id 
,Technical_Sales_Expert_lookup__r.Sales_Director__c = $User.Id 
, Technical_Sales_Expert_lookup__r.Sales_VP__c  = $User.Id 
, Technical_Sales_Expert_lookup__r.Sales_SVP__c  = $User.Id 
, Technical_Sales_Expert_lookup__r.Sales_EVP__c  = $User.Id 
,  Technical_Sales_Expert_lookup__r.Case_Approver__c  = $User.Id 
,   Technical_Sales_Expert_lookup__r.Operations_VP__c   = $User.Id 
, $Profile.Name = &apos;Integration&apos;
, $Profile.Name = &apos;Salesforce API Only System Integrations&apos;
, $Profile.Name = &apos;Sales Operations&apos;
) 
, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Teams Specialist</label>
    <type>Checkbox</type>
</CustomField>