force-app/main/default/objects/Technical_Sales_Expert__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TSE Product</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Technical_Sales_Experts</relationshipName>
    <type>Lookup</type>
</CustomField>