force-app/main/default/objects/Technical_Sales_Expert__c/fields/Product_Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Product_Primary_Business__c</fullName>
    <formula>text(Product__r.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Primary Business</label>
    <type>Text</type>
</CustomField>