force-app/main/default/objects/Technical_Sales_Expert__c/fields/Reporting_Segment__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Segment__c</fullName>
    <formula>text(Product__r.Reporting_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Segment</label>
    <type>Text</type>
</CustomField>