force-app/main/default/objects/Technical_Sales_Expert__c/fields/Technical_Sales_Expert_lookup__c.field-meta.xml
<CustomField>
    <fullName>Technical_Sales_Expert_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Technical Sales Expert</description>
    <label>Support TSE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Technical_Sales_Experts</relationshipName>
    <type>Lookup</type>
</CustomField>