force-app/main/default/objects/Technical_Sales_Expert__c/fields/Technical_Sales_Expert_name__c.field-meta.xml
<CustomField>
    <fullName>Technical_Sales_Expert_name__c</fullName>
    <formula>Technical_Sales_Expert_lookup__r.Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support TSE Name</label>
    <type>Text</type>
</CustomField>